fix radio button alignment

--- a/components/corespring/match/src/client/styles.less
+++ b/components/corespring/match/src/client/styles.less
@@ -468,7 +468,8 @@
           display: inline-block;
           width: 16px;
           height: 16px;
-          margin-left: 1px;
+          margin-left: auto;
+          margin-right: auto;
           margin-top: 1px;
           border-radius: 50%;
           background-color: #555555;
